@@ -12,190 +12,86 @@ import showroomz.domain.member.creator.entity.Creator;
 import showroomz.domain.member.creator.repository.CreatorFollowRepository;
 import showroomz.domain.member.user.entity.Users;
 import showroomz.domain.post.entity.Post;
-import showroomz.domain.post.entity.PostProduct;
-import showroomz.domain.post.entity.PostWishlist;
+import showroomz.domain.post.entity.PostImage;
+import showroomz.domain.post.entity.PostLike;
+import showroomz.domain.post.policy.PostPolicies;
+import showroomz.domain.post.repository.PostImageRepository;
+import showroomz.domain.post.repository.PostLikeRepository;
 import showroomz.domain.post.repository.PostRepository;
-import showroomz.domain.post.repository.PostWishlistRepository;
-import showroomz.domain.product.entity.Product;
-import showroomz.domain.review.repository.ReviewRepository;
-import showroomz.domain.wishlist.repository.WishlistRepository;
 import showroomz.global.dto.PageResponse;
 import showroomz.global.dto.PagingRequest;
 import showroomz.global.error.exception.BusinessException;
 import showroomz.global.error.exception.ErrorCode;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+/**
+ * 소비자에게 게시물을 보여주는 서비스.
+ *
+ * <p>경로와 응답 구조는 <b>계약</b>이라 그대로 두고 안쪽만 §24에 맞췄다. 바뀐 것은 세 가지다 —
+ * 노출 조건이 {@code isDisplay}에서 <b>게시중 상태</b>로, 위시리스트 용어가 <b>좋아요</b>로,
+ * 그리고 응답에 <b>비율</b>이 실린다.
+ *
+ * <p>상세 조회에서 조회수를 올리지 않는다. 노출은 이제 뷰포트 진입을 기준으로
+ * {@link PostImpressionService}가 적재한다 — 상세를 열 때마다 세면 피드에서 스쳐 지나간 노출과
+ * 상세를 연 노출이 같은 지표에 뒤섞인다.
+ */
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
-@Transactional
+@Transactional(readOnly = true)
 public class UserPostService {
 
     private final PostRepository postRepository;
-    private final PostWishlistRepository postWishlistRepository;
+    private final PostLikeRepository postLikeRepository;
+    private final PostImageRepository postImageRepository;
     private final CreatorFollowRepository creatorFollowRepository;
     private final UserRepository userRepository;
-    private final WishlistRepository wishlistRepository;
-    private final ReviewRepository reviewRepository;
+    private final PostPolicies postPolicies;
 
-    @Transactional(readOnly = true)
     public PostDto.PostDetailResponse getPostById(String username, Long postId) {
-        // 1. Post 조회 (등록 상품 목록 포함, N+1 방지)
-        Post post = postRepository.findByIdWithPostProductsAndProducts(postId)
+        Post post = postRepository.findByIdWithImages(postId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.POST_NOT_FOUND));
 
-        // 2. 전시 여부 확인
-        if (!post.getIsDisplay()) {
+        // 게시중이 아닌 게시물은 소비자에게 "없는 것"이다 — 작성중·노출 중지·삭제를 구분해 알려주지 않는다
+        if (!post.isVisibleToConsumer()) {
             throw new BusinessException(ErrorCode.POST_NOT_FOUND);
         }
 
-        // 3. 조회수 증가
-        post.incrementViewCount();
+        Users user = findUser(username);
+        boolean liked = user != null && postLikeRepository.existsByUserIdAndPostId(user.getId(), postId);
 
-        // 4. 위시리스트 여부 확인 (로그인 사용자만)
-        Boolean isPostWishlisted = false;
-        Users user = null;
-        if (username != null) {
-            user = userRepository.findByUsername(username).orElse(null);
-            if (user != null) {
-                isPostWishlisted = postWishlistRepository.existsByUserIdAndPostId(user.getId(), postId);
-            }
-        }
-
-        // 5. 단일 포스트에 대한 상품 ID 목록 추출 및 일괄 조회
-        List<Long> productIds = post.getPostProducts().stream()
-                .map(pp -> pp.getProduct().getProductId())
-                .collect(Collectors.toList());
-
-        Map<Long, Long> wishlistCountMap = toWishlistCountMap(productIds);
-        Map<Long, Long> reviewCountMap = toReviewCountMap(productIds);
-        Set<Long> wishedProductIds = user != null && !productIds.isEmpty()
-                ? wishlistRepository.findProductIdsWishedByUserAndProductIdIn(user.getId(), productIds)
-                : Collections.emptySet();
-
-        // 6. 포스트에 등록된 상품 목록 DTO 변환 (메모리 매핑)
-        List<PostDto.PostProductResponse> registeredProducts = buildRegisteredProducts(
-                post, wishlistCountMap, reviewCountMap, wishedProductIds);
-
-        // 7. Response 생성
         Creator creator = post.getCreator();
         return PostDto.PostDetailResponse.builder()
                 .postId(post.getId())
                 .showroomId(creator.getId())
                 .showroomName(showroomName(creator))
                 .showroomImageUrl(creator.getProfileImageUrl())
-                .title(post.getTitle())
                 .content(post.getContent())
-                .imageUrls(post.getImageUrls())
-                .viewCount(post.getViewCount())
-                .isWishlisted(isPostWishlisted)
-                .wishlistCount(post.getWishlistCount())
-                .registeredProducts(registeredProducts)
-                .createdAt(post.getCreatedAt())
+                .imageUrls(post.getImages().stream().map(PostImage::getImageUrl).toList())
+                .imageCount(post.getImageCount())
+                .aspectRatio(post.getAspectRatio())
+                .impressionCount(post.getImpressionCount())
+                .isLiked(liked)
+                .likeCount(post.getLikeCount())
+                .publishedAt(post.getPublishedAt())
                 .modifiedAt(post.getModifiedAt())
                 .build();
     }
 
-    private Map<Long, Long> toWishlistCountMap(List<Long> productIds) {
-        if (productIds == null || productIds.isEmpty()) {
-            return Collections.emptyMap();
-        }
-        List<Object[]> rows = wishlistRepository.countWishlistByProductIds(productIds);
-        return rows.stream()
-                .collect(Collectors.toMap(row -> (Long) row[0], row -> ((Number) row[1]).longValue()));
-    }
-
-    private Map<Long, Long> toReviewCountMap(List<Long> productIds) {
-        if (productIds == null || productIds.isEmpty()) {
-            return Collections.emptyMap();
-        }
-        List<Object[]> rows = reviewRepository.countByProductIds(productIds);
-        return rows.stream()
-                .collect(Collectors.toMap(row -> (Long) row[0], row -> ((Number) row[1]).longValue()));
-    }
-
-    private Integer calculateDiscountRate(Integer regularPrice, Integer salePrice) {
-        if (regularPrice == null || salePrice == null || regularPrice <= 0) {
-            return 0;
-        }
-        double rate = ((double) (regularPrice - salePrice) / regularPrice) * 100.0;
-        int rounded = (int) Math.round(rate);
-        return Math.max(0, Math.min(rounded, 100));
-    }
-
-    @Transactional(readOnly = true)
     public PageResponse<PostDto.FeedItemResponse> getPostList(String username, PagingRequest pagingRequest, Long showroomId) {
         Pageable pageable = pagingRequest.toPageable();
+        Page<Post> postPage = showroomId != null
+                ? postRepository.findDisplayedPostsByCreatorId(showroomId, pageable)
+                : postRepository.findDisplayedPosts(pageable);
 
-        // 2. Post 목록 조회
-        Page<Post> postPage;
-        if (showroomId != null) {
-            postPage = postRepository.findDisplayedPostsByCreatorId(showroomId, pageable);
-        } else {
-            postPage = postRepository.findDisplayedPosts(pageable);
-        }
-
-        // 3. 위시리스트 여부 확인 (로그인 사용자만)
-        Map<Long, Boolean> wishlistMap = Map.of();
-        Users user = null;
-        if (username != null) {
-            user = userRepository.findByUsername(username).orElse(null);
-            if (user != null) {
-                List<Long> postIds = postPage.getContent().stream()
-                        .map(Post::getId)
-                        .collect(Collectors.toList());
-                
-                List<Long> wishlistedPostIds = postWishlistRepository
-                        .findWishlistedPostIdsByUserIdAndPostIds(user.getId(), postIds);
-                
-                wishlistMap = wishlistedPostIds.stream()
-                        .collect(Collectors.toMap(id -> id, id -> true));
-            }
-        }
-
-        // 4. 상품 데이터 일괄 조회 (N+1 최적화)
-        List<Long> allProductIds = extractAllProductIds(postPage.getContent());
-        Map<Long, Long> globalWishlistCountMap = toWishlistCountMap(allProductIds);
-        Map<Long, Long> globalReviewCountMap = toReviewCountMap(allProductIds);
-        Set<Long> globalWishedProductIds = user != null && !allProductIds.isEmpty()
-                ? wishlistRepository.findProductIdsWishedByUserAndProductIdIn(user.getId(), allProductIds)
-                : Collections.emptySet();
-
-        // 5. DTO 변환
-        final Map<Long, Boolean> finalWishlistMap = wishlistMap;
-        Page<PostDto.FeedItemResponse> dtoPage = postPage.map(post -> {
-            Creator creator = post.getCreator();
-            List<PostDto.PostProductResponse> registeredProducts = buildRegisteredProducts(
-                    post, globalWishlistCountMap, globalReviewCountMap, globalWishedProductIds);
-            PostDto.PostListItem postItem = PostDto.PostListItem.builder()
-                    .postId(post.getId())
-                    .showroomId(creator.getId())
-                    .showroomName(showroomName(creator))
-                    .showroomImageUrl(creator.getProfileImageUrl())
-                    .title(post.getTitle())
-                    .imageUrls(post.getImageUrls())
-                    .viewCount(post.getViewCount())
-                    .isWishlisted(finalWishlistMap.getOrDefault(post.getId(), false))
-                    .wishlistCount(post.getWishlistCount())
-                    .registeredProducts(registeredProducts)
-                    .createdAt(post.getCreatedAt())
-                    .build();
-            return PostDto.FeedItemResponse.builder()
-                    .contentType("POST")
-                    .post(postItem)
-                    .build();
-        });
-
-        return new PageResponse<>(dtoPage);
+        return toFeed(postPage, likedPostIds(findUser(username), postPage.getContent()));
     }
 
-    @Transactional(readOnly = true)
     public PageResponse<PostDto.FeedItemResponse> getFollowingFeed(String username, PagingRequest pagingRequest) {
         Users user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
@@ -208,202 +104,119 @@ public class UserPostService {
         }
 
         Page<Post> postPage = postRepository.findDisplayedPostsByFollowingCreatorIds(followingShowroomIds, pageable);
-
-        List<Long> postIds = postPage.getContent().stream()
-                .map(Post::getId)
-                .collect(Collectors.toList());
-
-        Map<Long, Boolean> wishlistMap = Map.of();
-        if (!postIds.isEmpty()) {
-            List<Long> wishlistedPostIds = postWishlistRepository
-                    .findWishlistedPostIdsByUserIdAndPostIds(user.getId(), postIds);
-
-            wishlistMap = wishlistedPostIds.stream()
-                    .collect(Collectors.toMap(id -> id, id -> true));
-        }
-
-        // 3. 상품 데이터 일괄 조회 (N+1 최적화)
-        List<Long> allProductIds = extractAllProductIds(postPage.getContent());
-        Map<Long, Long> globalWishlistCountMap = toWishlistCountMap(allProductIds);
-        Map<Long, Long> globalReviewCountMap = toReviewCountMap(allProductIds);
-        Set<Long> globalWishedProductIds = !allProductIds.isEmpty()
-                ? wishlistRepository.findProductIdsWishedByUserAndProductIdIn(user.getId(), allProductIds)
-                : Collections.emptySet();
-
-        final Map<Long, Boolean> finalWishlistMap = wishlistMap;
-        Page<PostDto.FeedItemResponse> dtoPage = postPage.map(post -> {
-            Creator creator = post.getCreator();
-            List<PostDto.PostProductResponse> registeredProducts = buildRegisteredProducts(
-                    post, globalWishlistCountMap, globalReviewCountMap, globalWishedProductIds);
-            PostDto.PostListItem postItem = PostDto.PostListItem.builder()
-                    .postId(post.getId())
-                    .showroomId(creator.getId())
-                    .showroomName(showroomName(creator))
-                    .showroomImageUrl(creator.getProfileImageUrl())
-                    .title(post.getTitle())
-                    .imageUrls(post.getImageUrls())
-                    .viewCount(post.getViewCount())
-                    .isWishlisted(finalWishlistMap.getOrDefault(post.getId(), false))
-                    .wishlistCount(post.getWishlistCount())
-                    .registeredProducts(registeredProducts)
-                    .createdAt(post.getCreatedAt())
-                    .build();
-
-            return PostDto.FeedItemResponse.builder()
-                    .contentType("POST")
-                    .post(postItem)
-                    .build();
-        });
-
-        return new PageResponse<>(dtoPage);
+        return toFeed(postPage, likedPostIds(user, postPage.getContent()));
     }
 
-    public void addPostToWishlist(String username, Long postId) {
-        // 1. User 조회
+    /** 좋아요한 게시물 모음 — 그 사이 내려간 게시물은 목록에서 빠진다 */
+    public PageResponse<PostDto.FeedItemResponse> getLikedPosts(String username, PagingRequest pagingRequest) {
         Users user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        // 2. Post 조회
+        Page<Post> postPage = postLikeRepository.findLikedPostsByUserId(user.getId(), pagingRequest.toPageable());
+        Set<Long> allLiked = postPage.getContent().stream().map(Post::getId).collect(Collectors.toSet());
+
+        return toFeed(postPage, allLiked);
+    }
+
+    @Transactional
+    public void likePost(String username, Long postId) {
+        Users user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.POST_NOT_FOUND));
 
-        // 3. 전시 여부 확인
-        if (!post.getIsDisplay()) {
+        // 좋아요 가능 여부는 타입별 규칙이다 — 공구 게시물은 마감이면 새 좋아요를 받지 않는다(C5)
+        if (!postPolicies.of(post).canLike(post)) {
             throw new BusinessException(ErrorCode.POST_NOT_FOUND);
         }
 
-        // 4. 이미 위시리스트에 있는지 확인
-        if (postWishlistRepository.existsByUserIdAndPostId(user.getId(), postId)) {
-            // 멱등성: 이미 찜 되어 있으면 성공(204)로 처리
+        // 멱등성: 이미 눌러 뒀으면 성공(204)으로 끝낸다
+        if (postLikeRepository.existsByUserIdAndPostId(user.getId(), postId)) {
             return;
         }
 
-        // 5. 위시리스트에 추가
-        PostWishlist postWishlist = new PostWishlist(user, post);
-        postWishlistRepository.save(postWishlist);
-        post.incrementWishlistCount();
+        postLikeRepository.save(new PostLike(user, post));
+        post.increaseLikeCount();
     }
 
-    public void removePostFromWishlist(String username, Long postId) {
-        // 1. User 조회
+    @Transactional
+    public void unlikePost(String username, Long postId) {
         Users user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
-
-        // 2. Post 조회
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.POST_NOT_FOUND));
 
-        // 3. 멱등성: 없으면 그냥 성공(204)로 처리
-        if (!postWishlistRepository.existsByUserIdAndPostId(user.getId(), postId)) {
+        // 멱등성: 누른 적이 없으면 그대로 성공으로 끝낸다
+        if (!postLikeRepository.existsByUserIdAndPostId(user.getId(), postId)) {
             return;
         }
 
-        postWishlistRepository.deleteByUserIdAndPostId(user.getId(), postId);
-        post.decrementWishlistCount();
+        postLikeRepository.deleteByUserIdAndPostId(user.getId(), postId);
+        post.decreaseLikeCount();
     }
 
-    @Transactional(readOnly = true)
-    public PageResponse<PostDto.FeedItemResponse> getWishlistedPosts(String username, PagingRequest pagingRequest) {
-        Users user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+    // ------------------------------------------------------------------ 내부
 
-        // 2. Pageable 생성
-        Pageable pageable = pagingRequest.toPageable();
-
-        // 3. 위시리스트 조회
-        Page<Post> postPage = postWishlistRepository.findWishlistedPostsByUserId(user.getId(), pageable);
-
-        // 4. 상품 데이터 일괄 조회 (N+1 최적화)
-        List<Long> allProductIds = extractAllProductIds(postPage.getContent());
-        Map<Long, Long> globalWishlistCountMap = toWishlistCountMap(allProductIds);
-        Map<Long, Long> globalReviewCountMap = toReviewCountMap(allProductIds);
-        Set<Long> globalWishedProductIds = !allProductIds.isEmpty()
-                ? wishlistRepository.findProductIdsWishedByUserAndProductIdIn(user.getId(), allProductIds)
-                : Collections.emptySet();
+    private PageResponse<PostDto.FeedItemResponse> toFeed(Page<Post> postPage, Set<Long> likedPostIds) {
+        Map<Long, List<String>> imagesByPost = imagesByPost(postPage.getContent());
 
         Page<PostDto.FeedItemResponse> dtoPage = postPage.map(post -> {
+            List<String> imageUrls = imagesByPost.getOrDefault(post.getId(), List.of());
             Creator creator = post.getCreator();
-            List<PostDto.PostProductResponse> registeredProducts = buildRegisteredProducts(
-                    post, globalWishlistCountMap, globalReviewCountMap, globalWishedProductIds);
-            PostDto.PostListItem postItem = PostDto.PostListItem.builder()
+            PostDto.PostListItem item = PostDto.PostListItem.builder()
                     .postId(post.getId())
                     .showroomId(creator.getId())
                     .showroomName(showroomName(creator))
                     .showroomImageUrl(creator.getProfileImageUrl())
-                    .title(post.getTitle())
-                    .imageUrls(post.getImageUrls())
-                    .viewCount(post.getViewCount())
-                    .isWishlisted(true)
-                    .wishlistCount(post.getWishlistCount())
-                    .registeredProducts(registeredProducts)
-                    .createdAt(post.getCreatedAt())
+                    .content(post.getContent())
+                    .imageUrls(imageUrls)
+                    .imageCount(imageUrls.size())
+                    .aspectRatio(post.getAspectRatio())
+                    .impressionCount(post.getImpressionCount())
+                    .isLiked(likedPostIds.contains(post.getId()))
+                    .likeCount(post.getLikeCount())
+                    .publishedAt(post.getPublishedAt())
                     .build();
             return PostDto.FeedItemResponse.builder()
-                    .contentType("POST")
-                    .post(postItem)
+                    .contentType(post.getPostType().name())
+                    .post(item)
                     .build();
         });
-
         return new PageResponse<>(dtoPage);
     }
 
-    /**
-     * 조회된 여러 Post 엔티티 내부의 상품 ID를 중복 없이 수집합니다.
-     */
-    private List<Long> extractAllProductIds(List<Post> posts) {
-        return posts.stream()
-                .filter(post -> post.getPostProducts() != null)
-                .flatMap(post -> post.getPostProducts().stream())
-                .map(pp -> pp.getProduct().getProductId())
-                .distinct()
-                .collect(Collectors.toList());
+    private Set<Long> likedPostIds(Users user, List<Post> posts) {
+        if (user == null || posts.isEmpty()) {
+            return Collections.emptySet();
+        }
+        List<Long> postIds = posts.stream().map(Post::getId).toList();
+        return Set.copyOf(postLikeRepository.findLikedPostIdsByUserIdAndPostIds(user.getId(), postIds));
     }
 
-    /**
-     * 미리 조회한 집계 맵과 Set을 사용해 포스트 상품 목록을 DTO로 변환합니다.
-     */
-    private List<PostDto.PostProductResponse> buildRegisteredProducts(
-            Post post,
-            Map<Long, Long> wishlistCountMap,
-            Map<Long, Long> reviewCountMap,
-            Set<Long> wishedProductIds) {
+    private Users findUser(String username) {
+        return username == null ? null : userRepository.findByUsername(username).orElse(null);
+    }
 
-        List<PostProduct> postProducts = post.getPostProducts();
-        if (postProducts == null || postProducts.isEmpty()) {
-            return Collections.emptyList();
+    /** 피드 한 페이지의 사진을 한 번에 읽어 게시물별로 묶는다 — 게시물마다 지연 로딩하면 쿼리가 페이지 크기만큼 늘어난다 */
+    private Map<Long, List<String>> imagesByPost(List<Post> posts) {
+        if (posts.isEmpty()) {
+            return Map.of();
         }
-
-        List<PostDto.PostProductResponse> result = new ArrayList<>();
-        for (PostProduct pp : postProducts) {
-            Product product = pp.getProduct();
-            Long pid = product.getProductId();
-            Integer regularPrice = product.getRegularPrice();
-            Integer salePrice = product.getSalePrice();
-            Integer discountRate = calculateDiscountRate(regularPrice, salePrice);
-
-            result.add(PostDto.PostProductResponse.builder()
-                    .productId(pid)
-                    .productImageUrl(product.getThumbnailUrl())
-                    .marketName(product.getMarket() != null ? product.getMarket().getMarketName() : null)
-                    .productName(product.getName())
-                    .discountRate(discountRate)
-                    .price(salePrice != null ? salePrice : product.getRegularPrice())
-                    .wishlistCount(wishlistCountMap.getOrDefault(pid, 0L))
-                    .reviewCount(reviewCountMap.getOrDefault(pid, 0L))
-                    .isWishlisted(wishedProductIds.contains(pid))
-                    .build());
-        }
-        return result;
+        List<Long> postIds = posts.stream().map(Post::getId).toList();
+        return postImageRepository.findByPostIdsOrdered(postIds).stream()
+                .collect(Collectors.groupingBy(
+                        image -> image.getPost().getId(),
+                        Collectors.mapping(PostImage::getImageUrl, Collectors.toList())));
     }
 
     /**
      * §22-1 — 소비자에게 보이는 이름은 <b>쇼룸명</b>이다. 앱 계정 닉네임은 개인 소비 계정의 이름이라
-     * 판매 채널의 간판으로 쓰지 않는다(구버전의 "앱 계정 공유" 규칙은 폐기됐다).
-     * 쇼룸명이 아직 없는 가입 도중 상태에서만 닉네임으로 떨어진다.
+     * 판매 채널의 간판으로 쓰지 않는다. 쇼룸명이 아직 없는 가입 도중 상태에서만 닉네임으로 떨어진다.
      */
     private static String showroomName(Creator creator) {
         return creator.getShowroomName() != null
                 ? creator.getShowroomName()
                 : creator.getUser().getNickname();
     }
+
 }
